--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
 </head>
-  <body>
+  <body style="background-color: #F9C407;">
     <div class="card text-bg-dark">
       <img src="./IMG/Captura de Pantalla 2023-11-13 a la(s) 18.38.30.png" class="card-img" alt="...">
       <div class="card-img-overlay">
