--- a/index.html
+++ b/index.html
@@ -1,20 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ANGELA VERA</title>
-    <link rel="icon" type="image" href="./IMG/creepyHeart.png" />
-    <link rel="stylesheet" href="./style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ANGELA VERA</title>
+  <link rel="icon" type="image" href="./img/logo.png">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Lexend+Giga:wght@900&display=swap" rel="stylesheet">
+  
+  <style>
+
+.angela, .vera{
+  font-family: 'Kdam Thmor Pro', sans-serif;
+  font-family: 'Lexend Giga', sans-serif;
+  font-size: 270px;
+  color: #fff;
+}
+
+a:link, a:visited, a:active{
+  text-decoration: none;
+}
+.container{
+justify-content: center;
+
+}
+</style>
+
+
 </head>
-  <body style="background-color: #F9C407;">
-    <div class="card text-bg-dark">
-      <img src="./IMG/Captura de Pantalla 2023-11-13 a la(s) 18.38.30.png" class="card-img" alt="...">
-      <div class="card-img-overlay">
-        <a href="./about-me.html"><img src="./IMG/1216195.webp" alt="arrow" width="100" height="100"></a>
-      </div>
-    </div> 
-    </body>
-    </html>
+<body style="background-color: #2b2b2b;">
+  <div class="container">
+  <a href="./body.html"><p class="angela">ANGELA</p></a>
+  <a href="./body.html"><p class="vera">VERA</p></a>
+</div>
+
+
+</body>
+</html>
