se cambio el nombre de las imagenes

--- a/body.html
+++ b/body.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ANGELA VERA</title>
-  <link rel="icon" type="image" href="./img/logo.png">
+  <link rel="icon" type="image" href="./IMG/logo.png">
   <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -72,7 +72,7 @@ a:link, a:visited, a:active{
   <div class="introduccion">
     <h2 style="margin-top: 100px;">ABOUT ME</h2>
     <div id="about">
-    <img class="derecha" src="./img/IMG_9027 (1).jpg">
+    <img class="derecha" src="./IMG/IMG_9027 (1).jpg">
   </div>
   
     <aside>
@@ -81,7 +81,7 @@ a:link, a:visited, a:active{
       <p>I am embarking on a journey to become a Java Full Stack developer through a rigorous boot camp. My commitment to learning and my goal-oriented approach drive me to seek new challenges and innovative solutions continuously. I am excited about the opportunities ahead and eager to contribute my diverse skills to the tech world.</p></aside>
     <div class="reset"></div>
       <div id="cv-btn" class="important-btn">
-        <a href="./img/Angela_Vera_CV.pdf" title="CV" download="AngelaVera CV">
+        <a href="./IMG/Angela_Vera_CV.pdf" title="CV" download="AngelaVera CV">
           <button type="button" class="btnbody" class="btnImportant" title="btncv"><i class="fa fa-download"></i>Download CV</button>
         </a>
       </div>
@@ -92,52 +92,52 @@ a:link, a:visited, a:active{
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card" style="background: none; border: none;">
-          <img src="./img/portafolio/logos/html logo.png" class="card-img-top" alt="html">
+          <img src="./IMG/portafolio/logos/html logo.png" class="card-img-top" alt="html">
         </div>
       </div>
       <div class="col">
         <div class="card" style="background: none; border: none;">
-          <img src="./img/portafolio/logos/css logo.png" class="card-img-top" alt="css">
+          <img src="./IMG/portafolio/logos/css logo.png" class="card-img-top" alt="css">
         </div>
       </div>
       <div class="col">
         <div class="card"style="background: none; border: none;">
-          <img src="./img/portafolio/logos/js logo.png" class="card-img-top" alt="js">
+          <img src="./IMG/portafolio/logos/js logo.png" class="card-img-top" alt="js">
         </div>
       </div>
       <div class="col">
         <div class="card"style="background: none; border: none;">
-          <img src="./img/portafolio/logos/java-logo-1.png" class="card-img-top" alt="java">
+          <img src="./IMG/portafolio/logos/java-logo-1.png" class="card-img-top" alt="java">
         </div>
       </div>
       <div class="col">
         <div class="card"style="background: none; border: none;">
-          <img src="./img/portafolio/logos/react logo.png" class="card-img-top" alt="react">
+          <img src="./IMG/portafolio/logos/react logo.png" class="card-img-top" alt="react">
         </div>
       </div>
       <div class="col">
         <div class="card" style="background: none; border: none;">
-          <img src="./img/portafolio/logos/git-logo.png" class="card-img-top" alt="git">
+          <img src="./IMG/portafolio/logos/git-logo.png" class="card-img-top" alt="git">
         </div>
       </div>
       <div class="col">
         <div class="card"style="background: none; border: none;">
-          <img src="./img/portafolio/logos/scrum logo.png" class="card-img-top" alt="scrum">
+          <img src="./IMG/portafolio/logos/scrum logo.png" class="card-img-top" alt="scrum">
         </div>
       </div>
       <div class="col">
         <div class="card"style="background: none; border: none;">
-          <img src="./img/portafolio/logos/mysql-logo-png-transparent.png" class="card-img-top" alt="mysql">
+          <img src="./IMG/portafolio/logos/mysql-logo-png-transparent.png" class="card-img-top" alt="mysql">
         </div>
       </div>
       <div class="col">
         <div class="card"style="background: none; border: none;">
-          <img src="./img/portafolio/logos/figma-logo.png" class="card-img-top" alt="figma">
+          <img src="./IMG/portafolio/logos/figma-logo.png" class="card-img-top" alt="figma">
         </div>
       </div>
       <div class="col">
         <div class="card"style="background: none; border: none;">
-          <img src="./img/portafolio/logos/trello-logo.png" class="card-img-top" alt="trello">
+          <img src="./IMG/portafolio/logos/trello-logo.png" class="card-img-top" alt="trello">
         </div>
       </div>
     </div>
@@ -155,17 +155,17 @@ a:link, a:visited, a:active{
     </div>
     <div class="carousel-inner" >
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="./img/centrocomunitario.png" class="d-block w-100" alt="...">
+        <img src="./IMG/Captura de Pantalla 2023-12-06 a la(s) 16.14.14.png" class="d-block w-100" alt="Proyecto Integrador">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="./img/carritocompras.png" class="d-block w-100" alt="...">
+        <img src="./IMG/centrocomunitario.png" class="d-block w-100" alt="Centro comunitorio">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
       <div class="carousel-item"data-bs-interval="2000">
-        <img src="./img/proyectointegrador.png" class="d-block w-100" alt="...">
+        <img src="./IMG/carritocompras.png" class="d-block w-100" alt="Carrito de compras">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
@@ -181,7 +181,7 @@ a:link, a:visited, a:active{
   </div>
   <div id="portfolio">
     <p>learn more about the projects</p>
-    <a href="https://github.com/averagon?tab=repositories"target="_blank" rel="noopener noreferrer"><img src="./img/portafolio/github.png" alt="github" width="40" height= "40"></a>
+    <a href="https://github.com/averagon?tab=repositories"target="_blank" rel="noopener noreferrer"><img src="./IMG/portafolio/github.png" alt="github" width="40" height= "40"></a>
   </div>
 </div>
 </section>
@@ -204,7 +204,7 @@ a:link, a:visited, a:active{
   </form>
 </section>
 
-<a href="./index.html"><img src="./img/1216195.webp" alt="arrow" class="arrow" width="40" height= "40"></a>
+<a href="./index.html"><img src="./IMG/1216195.webp" alt="arrow" class="arrow" width="40" height= "40"></a>
 
 <footer>
   <div class="footer">
@@ -213,7 +213,7 @@ a:link, a:visited, a:active{
     </div>
       <div class="images" style="flex-direction: column">
           <a href="https://github.com/averagon?tab=repositories" target="_blank" rel="noopener noreferrer">
-          <img src="./img/github-logo-2.png" alt="logo github" width="30" height="30">  
+          <img src="./IMG/github-logo-2.png" alt="logo github" width="30" height="30">  
           </a>
           <a href="https://www.linkedin.com/in/angela-vera-gonzalez/"target="_blank" rel="noopener noreferrer">
           <img src="./IMG/LinkedIn_logo_initials.png" alt="logo linkedin" width="30" height="30">
