se cambio la flecha

--- a/body.html
+++ b/body.html
@@ -204,7 +204,7 @@ a:link, a:visited, a:active{
   </form>
 </section>
 
-<a href="./index.html"><img src="./IMG/1216195.webp" alt="arrow" class="arrow" width="40" height= "40"></a>
+<a href="#body.html"><img src="./IMG/up-arrow.png" alt="arrow" class="arrow" width="40" height= "40"></a>
 
 <footer>
   <div class="footer">
