cambios en padding

--- a/body.html
+++ b/body.html
@@ -70,7 +70,7 @@ a:link, a:visited, a:active{
 
 <section id="about-me">
   <div class="introduccion">
-    <h2 style="margin-top: 100px;">ABOUT ME</h2>
+    <h2 style="margin-top: 70px;">ABOUT ME</h2>
     <div id="about">
     <img class="derecha" src="./IMG/IMG_9027 (1).jpg">
   </div>
@@ -204,7 +204,7 @@ a:link, a:visited, a:active{
   </form>
 </section>
 
-<a href="#body.html"><img src="./IMG/up-arrow.png" alt="arrow" class="arrow" width="40" height= "40"></a>
+<!-- <a href="#body.html"><img src="./IMG/up-arrow.png" alt="arrow" class="arrow" width="40" height= "40"></a> -->
 
 <footer>
   <div class="footer">
